--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,13 +19,17 @@
 		},
 		"ghcr.io/devcontainers/features/python:1": {}
 	},
-	"extensions": [
-		"ms-azuretools.vscode-docker",
-		"ms-python.python",
-		"redhat.vscode-yaml",
-		"njpwerner.autodocstring",
-		"eamodio.gitlens"
-	],
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-azuretools.vscode-docker",
+				"ms-python.python",
+				"redhat.vscode-yaml",
+				"njpwerner.autodocstring",
+				"eamodio.gitlens"
+			]
+		}
+	},
 	// Mount local aliases if any
 	"mounts": [
 		"source=/${env:HOME}/.bash_aliases,target=/home/vscode/.bash_aliases,type=bind,consistency=cached",
