--- a/.github/workflows/docker_readme.yml
+++ b/.github/workflows/docker_readme.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Update repo description
         uses: peter-evans/dockerhub-description@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: althack
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           repository: althack/${{ matrix.docker_repo }}
           readme-filepath: ${{ matrix.docker_repo }}/README.md
