--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,7 @@ name: Dockerfiles
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron: 0 0 1 * *
+    - cron: "0 0 1 * *"
   push:
     branches:
       - main
@@ -158,6 +158,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v2
+        if: ${{ github.ref == 'refs/heads/main' }}
         with:
           username: althack
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
