Add skeleton for rolling support

--- a/templates.yml
+++ b/templates.yml
@@ -48,6 +48,16 @@ ros:
     eol: true
 ros2:
   -
+    name: rolling
+    ros_distro: rolling
+    targets:
+      - base
+      - dev
+      - gazebo
+    python_version: "3.10"
+    base_image: "ubuntu"
+    image_version: "22.04"
+  -
     name: iron
     ros_distro: iron
     targets:
