Add generated changes from running generate.py
Signed-off-by: Adam Galecki <embeddedadam@gmail.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -88,6 +88,7 @@
       "description": "name of the image to build",
       "options": [
         "noetic",
+        "rolling",
         "iron",
         "iron-cuda",
         "humble",
