--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -60,6 +60,18 @@ jobs:
             target: gazebo
             platforms: linux/amd64
           - label: ros2
+            tag: rolling
+            target: base
+            platforms: linux/amd64,linux/arm64
+          - label: ros2
+            tag: rolling
+            target: dev
+            platforms: linux/amd64,linux/arm64
+          - label: ros2
+            tag: rolling
+            target: gazebo
+            platforms: linux/amd64
+          - label: ros2
             tag: iron
             target: base
             platforms: linux/amd64,linux/arm64
