--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,22 @@ annotated-types==0.6.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-flake8==6.1.0
+flake8==7.0.0
 idna==3.6
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 mccabe==0.7.0
 packaging==23.2
 pycodestyle==2.11.1
-pydantic==2.6.0
-pyflakes==3.1.0
+pydantic==2.6.1
+pydantic_core==2.16.2
+pyflakes==3.2.0
 pyparsing==3.1.1
 requests==2.31.0
-ruamel.yaml==0.18.5
+ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
-tqdm==4.66.1
+tqdm==4.66.2
 typer==0.9.0
 typing_extensions==4.9.0
-urllib3==2.2.0
+urllib3==2.2.1
 websocket-client==1.7.0
