--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,24 @@ click==8.1.7
 flake8==7.0.0
 idna==3.6
 Jinja2==3.1.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mccabe==0.7.0
+mdurl==0.1.2
 packaging==24.0
 pycodestyle==2.11.1
-pydantic==2.6.1
-pydantic_core==2.16.2
+pydantic==2.6.4
+pydantic_core==2.16.3
 pyflakes==3.2.0
+Pygments==2.17.2
 pyparsing==3.1.2
 requests==2.31.0
+rich==13.7.1
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
+shellingham==1.5.4
 tqdm==4.66.2
 typer==0.12.1
-typing_extensions==4.10.0
+typing_extensions==4.11.0
 urllib3==2.2.1
 websocket-client==1.7.0
