--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -97,7 +97,9 @@
         "fortress",
         "citadel",
         "harmonic",
+        "harmonic-cuda",
         "garden",
+        "garden-cuda",
         "all"
       ],
       "default": "foxy"
